# remilia

./: Cargo.toml  Makefile  README.md  TODO.md  build.rs  flake.nix
.cargo/: config.toml  x86_64-osdev-target.json  x86_64-remilia.json
kernel/: debug.rs  entry.asm  gdt.rs  lib.rs  link.ld  locked.rs  main.rs  serial.rs  vga.rs
kernel/devices/: keyboard.rs  mod.rs  serial.rs  vga.rs
kernel/heap/: bootstrap_frames.rs  eternal.rs  ffallocator.rs  mod.rs
kernel/interrupts/: idt.rs  mod.rs  pic.rs
kernel/vmem/: mod.rs  notes.md  paging.rs
patchouli/: Cargo.toml
patchouli/src/: addr.rs  ansi_term.rs  lib.rs  units.rs
patchouli/src/mem/: mod.rs
sakuya/: Cargo.toml
sakuya/src/: ansi_term.rs  lib.rs
src/: debug.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  kalloc.rs  should_panic.rs  stack_overflow.rs
