[package]
name = "osdev"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.17"
volatile = "0.2.6"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9.0"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[profile.dev]

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false
