[package]
name = "remilia"
version = "0.0.2"
license = "BSD-3"
authors = ["Yokodake <yokodake@cinnabar.fr"]
description = "toy OS for educational purposes"
repository = "https://github.com/yokodake/remilia"
edition = "2018"

[workspace]
members = [ "sakuya" ]

[lib]
path = "kernel/lib.rs"
name = "kernel"

[[bin]]
path = "kernel/main.rs"
name = "remilia"

[dependencies]
sakuya = { path = "./sakuya" }
bootloader = { version = "0.9.17", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9.0"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]
test-success-exit-code = 33

