[package]
name = "remilia"
version = "0.0.2"
license = "BSD-3"
authors = ["Yokodake <yokodake@cinnabar.fr"]
description = "toy OS for educational purposes"
repository = "https://github.com/yokodake/remilia"
edition = "2018"

[[bin]]
path = "kernel/main.rs"
name = "remilia"

[dependencies]
volatile = "0.2.6"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9.0"
x86_64 = "0.14.2"

[build-dependencies]
target_build_utils = "0.1"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
